MainActivity: Home Fragment: Improve UI
Signed-off-by: Shashank Verma <shashank.verma2002@gmail.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,22 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".view.activities.MainActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/main_color"
-            android:backgroundTint="@color/main_color"
-            app:navigationIcon="@drawable/ic_baseline_menu_24"
-            app:title="@string/app_name"
-            app:titleTextColor="@color/white" />
-
-    </RelativeLayout>
-
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -34,7 +18,24 @@
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="56dp" />
+        android:layout_height="match_parent" />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:backgroundTint="@android:color/transparent">
+
+
+        <androidx.appcompat.widget.AppCompatImageButton
+            android:id="@+id/menu_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@android:color/transparent"
+            android:padding="8dp"
+            android:src="@drawable/ic_baseline_menu_24" />
+
+
+    </RelativeLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
