--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -78,6 +78,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
+            android:layout_marginBottom="72dp"
             android:autoLink="all"
             android:fontFamily="@font/nunito_semibold"
             android:paddingHorizontal="10dp"
