--- a/app/src/main/res/layout/activity_create_post.xml
+++ b/app/src/main/res/layout/activity_create_post.xml
@@ -2,19 +2,22 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true"
+    android:clipToPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
+        android:animateLayoutChanges="true"
         android:orientation="vertical">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/item_background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="12dp"
             android:backgroundTint="@color/white"
             app:cardCornerRadius="5dp"
             app:strokeColor="@color/slate_300"
@@ -53,36 +56,55 @@
 
         </com.google.android.material.card.MaterialCardView>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/tvMessage"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        <com.google.android.material.chip.Chip
+            android:id="@+id/preview_chip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:layout_marginEnd="12dp"
+            android:animateLayoutChanges="true"
+            android:checkable="true"
+            android:checked="false"
+            android:text="Show Preview"
+            android:textColor="@color/black"
+            app:chipBackgroundColor="@android:color/transparent"
+            app:chipStrokeColor="@color/black"
+            app:chipStrokeWidth="1dp" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/etMessage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:layout_marginHorizontal="4dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:allowUndo="true"
+            android:background="@android:color/transparent"
+            android:cursorVisible="true"
+            android:elegantTextHeight="true"
+            android:fontFamily="@font/nunito_semibold"
             android:gravity="top"
             android:hint="Message"
+            android:inputType="textMultiLine|textCapSentences|textAutoCorrect|textAutoComplete"
             android:isScrollContainer="true"
-            android:textColorHint="@color/black"
-            app:boxStrokeColor="@color/black"
-            app:boxStrokeWidth="1dp"
-            app:hintAnimationEnabled="true"
-            app:hintTextColor="@color/black">
+            android:lineSpacingExtra="3dp"
+            android:linksClickable="true"
+            android:paddingTop="8dp"
+            android:paddingBottom="18dp"
+            android:textSize="15sp" />
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etMessage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:allowUndo="true"
-                android:backgroundTint="@color/white"
-                android:fontFamily="@font/nunito_semibold"
-                android:gravity="top"
-                android:inputType="textMultiLine|textCapSentences|textAutoCorrect|textAutoComplete"
-                android:isScrollContainer="true"
-                android:lineSpacingExtra="3dp" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/mkd_test"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp"
+            android:layout_marginBottom="32dp"
+            android:fontFamily="@font/nunito_semibold"
+            android:paddingTop="8dp"
+            android:text="Robotics Club"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:visibility="gone" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/send_post"
