--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,41 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/home"
-            android:icon="@drawable/home"
-            android:title="Home" />
-        <item
-            android:id="@+id/notifications"
-            android:icon="@drawable/notification"
-            android:title="Notifications" />
-        <item
-            android:id="@+id/admin_panel"
-            android:icon="@drawable/admin_panel"
-            android:title="Admin Panel" />
+            android:icon="@drawable/menu_home_icon"
+            android:title="Home"
+            app:showAsAction="ifRoom" />
         <item
             android:id="@+id/profile_section"
-            android:icon="@drawable/admin_panel"
-            android:title="Profile Section" />
+            android:icon="@drawable/menu_account_icon"
+            android:title="Profile"
+            app:showAsAction="ifRoom" />
+        <item
+            android:id="@+id/help"
+            android:icon="@drawable/menu_help_icon"
+            android:title="Contact Us"
+            app:showAsAction="ifRoom" />
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <group android:checkableBehavior="single">
-                <item
-                    android:id="@+id/about_us"
-                    android:icon="@drawable/about_us"
-                    android:title="About us" />
-                <item
-                    android:id="@+id/help"
-                    android:icon="@drawable/help"
-                    android:title="Help" />
-                <item
-                    android:id="@+id/logout"
-                    android:icon="@drawable/help"
-                    android:title="Logout" />
-            </group>
-        </menu>
-    </item>
 </menu>
