--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="Theme.MotiClubs" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="android:statusBarColor">@color/backGroundColor</item>
-        <item name="android:navigationBarColor">@color/backGroundColor</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 </resources>
