Add logo and splash screen
Signed-off-by: Shashank Verma <shashank.verma2002@gmail.com>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="backGroundColor">#FF000000</color>
     <color name="notificationColor">#FF266EF1</color>
+    <color name="splashColor">#FF323E4E</color>
 </resources>
