--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,7 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="backGroundColor">#FFF9F9FB</color>
+    <color name="backgroundColor">#FFF9F9FB</color>
     <color name="notificationColor">#FF266EF1</color>
     <color name="splashColor">#FF323E4E</color>
 </resources>
